# qtchess

./: .gitignore  CMakeLists.txt  LICENSE  QtChess.pro  chessboard.cpp  chessboard.h  chesshandler.cpp  chesshandler.h  clientnetwork.cpp  clientnetwork.h  commdef.h  gamesettings.cpp  gamesettings.h  main.cpp  mainwindow.cpp  mainwindow.h  movegenerator.cpp  movegenerator.h  rc4.cpp  rc4.h  servernetwork.cpp  servernetwork.h  settingsdialog.cpp  settingsdialog.h  steplist.cpp  steplist.h  steptimerthread.cpp  steptimerthread.h  zobrist.cpp  zobrist.h
